--- a/my_proj/src/templates/home.html
+++ b/my_proj/src/templates/home.html
@@ -23,6 +23,7 @@
     {% block extrahead %}{% endblock extrahead %}
   </head>
 
+  
   <body>
     <div class="container">
         <div class="header clearfix">
@@ -43,8 +44,8 @@
           </div>
       </div>
     </nav>
-
     <!-- Main jumbotron for a primary marketing message or call to action -->
+    {% block splash %}
     <div class="jumbotron">
       <div class="container">
         <h1 class="display-3">Hello, world!</h1>
@@ -52,35 +53,29 @@
       </div>
       <p><a class="btn btn-secondary" href="#" role="button">Get Started</a></p>
     </div>
-
+    {% endblock splash %}
+    {% block container %}
     <div class="container">
       <!-- Example row of columns -->
       <div class="row">
-        <div class="col">
+        <div class="col-lg-4">
           <h2>Upload Document</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
         </div>
-        <div class="col">
-            <div class="text-center">
-                <img class="img-responsive" src="{% static 'site/img/arrow-graphics-7.png' %}" alt="ARROW RIGHT" width="150">
-            </div>
-         </div>
-        <div class="col">
+
+        <div class="col-lg-4">
           <h2>We extract information</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
        </div>
-       <div class="col">
-            <div class="text-center">
-                <img class="img-responsive" src="{% static 'site/img/arrow-graphics-7.png' %}" alt="ARROW RIGHT" width="150">
-            </div>
-        </div>
-        <div class="col">
+
+        <div class="col-lg-4">
           <h2>We email you ...</h2>
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
         </div>
       </div>
 
     </div> <!-- /container -->
+    {% endblock container %}
     <div class="jumbotron">
         <div class="file-upload-wrapper">
             <input type="file" id="input-file-now-custom-1" class="file-upload" data-default-file="https://mdbootstrap.com/img/Photos/Others/images/89.jpg" />
