--- a/my_proj/src/static/site/css/main.css
+++ b/my_proj/src/static/site/css/main.css
@@ -7,26 +7,24 @@ body {
   
   /* Main marketing message and sign up button */
   .jumbotron {
-    text-align: center;
+    text-align: left;
   }
   
   .header-clearfix {
-    color: grey;
-    text-emphasis-color: grey;
+    color: white;
+    text-emphasis-color: red;
+    align-content: right;
   }
   
-  #MainNav a{
-    color: grey;
-    text-decoration:none;
+  .nav-navbar-nav{
+    text-align: right;
   }
-  
-  #MainNav a:hover {
-   color: blue;
-   text-decoration: underline;
+
+  .button{
+      color: rgb(255, 31, 31);
   }
   
   footer {
-    padding-top: 2rem;
     background-color: rgb(99, 99, 99);
     color:gray;
   }
