--- a/my_proj/src/templates/home.html
+++ b/my_proj/src/templates/home.html
@@ -27,50 +27,63 @@
   <body>
     <div class="container">
         <div class="header clearfix">
-          <nav id="MainNav">
-            <ul class="nav nav-pills float-right">
-              <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Tour</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Blog</a>
-              </li>
-            </ul>
-          </nav>
-          <h3 class="text-muted">ScheduleThis</h3>
+            <nav class="navbar navbar-inverse navbar-fixed-top">
+                <div class="container-fluid">
+                  <div class="navbar-header">
+                    <a class="navbar-brand" href="#">Syllaview</a>
+                  </div>
+                  <div class="nav navbar-nav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Tour</a></li>
+                  </div>
+                </div>
+              </nav>
           </div>
       </div>
-    </nav>
     <!-- Main jumbotron for a primary marketing message or call to action -->
     {% block splash %}
     <div class="jumbotron">
       <div class="container">
-        <h1 class="display-3">Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+        <h1 class="display-2">Forgetting to study for an exam sucks! Syllaview is here to help!</h1>
+        <p>School can end up being overwhelming, but it doesn't have to be. Syllaview lets you keep 
+          track of everything with the press of a single button! Everything is kept in one place so
+          you can keep a peace of mind!
+        </p>
+      <button type="button" class="btn btn-primary btn-md">Get Started</button>
       </div>
-      <p><a class="btn btn-secondary" href="#" role="button">Get Started</a></p>
     </div>
     {% endblock splash %}
     {% block container %}
     <div class="container">
+      <h1>How it works</h1>
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-lg-4">
-          <h2>Upload Document</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+            <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+            width="100" height="100"
+            viewBox="0 0 192 192"
+            style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,192v-192h192v192z" fill="none"></path><g fill="#e74c3c"><path d="M44.8,12.8c-7.072,0 -12.8,5.728 -12.8,12.8v140.8c0,7.072 5.728,12.8 12.8,12.8h54.5125c-6.1312,-9.152 -9.7125,-20.1536 -9.7125,-32c0,-31.8144 25.7856,-57.6 57.6,-57.6c4.4032,0 8.6784,0.5342 12.8,1.475v-30.275c0,-1.696 -0.6718,-3.3218 -1.875,-4.525l-41.6,-41.6c-1.2032,-1.2032 -2.829,-1.875 -4.525,-1.875zM108.8,24.9875l39.0125,39.0125h-32.6125c-3.5328,0 -6.4,-2.8672 -6.4,-6.4zM147.2,102.4c-24.7424,0 -44.8,20.0576 -44.8,44.8c0,24.7424 20.0576,44.8 44.8,44.8c24.7424,0 44.8,-20.0576 44.8,-44.8c0,-24.7424 -20.0576,-44.8 -44.8,-44.8zM147.2,121.6c3.5328,0 6.4,2.8608 6.4,6.4v12.8h12.8c3.5328,0 6.4,2.8608 6.4,6.4c0,3.5392 -2.8672,6.4 -6.4,6.4h-12.8v12.8c0,3.5392 -2.8672,6.4 -6.4,6.4c-3.5328,0 -6.4,-2.8608 -6.4,-6.4v-12.8h-12.8c-3.5328,0 -6.4,-2.8608 -6.4,-6.4c0,-3.5392 2.8672,-6.4 6.4,-6.4h12.8v-12.8c0,-3.5392 2.8672,-6.4 6.4,-6.4z"></path></g></g></svg>
+          <h3>Upload Document</h3>
+          <p>Syllaview is compatible with all major PDF editors.</p>
         </div>
 
         <div class="col-lg-4">
-          <h2>We extract information</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+            <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+            width="100" height="100"
+            viewBox="0 0 192 192"
+            style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,192v-192h192v192z" fill="none"></path><g fill="#e74c3c"><path d="M96,12.8l-32,32h64zM48.75,25.6c-4.8896,0 -9.274,2.7166 -11.45,7.075l-11.7,23.4125v20.7125v76.8c0,7.072 5.728,12.8 12.8,12.8h115.2c7.072,0 12.8,-5.728 12.8,-12.8v-76.8v-19.2v-1.5125l-11.7,-23.4125c-2.176,-4.3648 -6.5604,-7.075 -11.45,-7.075h-16.35l12.8,12.8h3.55l9.6,19.2h-113.7l9.6,-19.2h3.55l12.8,-12.8zM76.8,70.4h38.4c3.5328,0 6.4,2.8672 6.4,6.4c0,3.5328 -2.8672,6.4 -6.4,6.4h-38.4c-3.5328,0 -6.4,-2.8672 -6.4,-6.4c0,-3.5328 2.8672,-6.4 6.4,-6.4z"></path></g></g></svg>
+          <h3>We extract the data</h3>
+          <p>We scan your documents for dates and annotations.</p>
        </div>
 
         <div class="col-lg-4">
-          <h2>We email you ...</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+            <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+              width="100" height="100"
+              viewBox="0 0 192 192"
+              style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,192v-192h192v192z" fill="none"></path><g fill="#e74c3c"><path d="M7.68,7.68v130.56h11.52v-119.04h122.88v-11.52zM26.88,26.88v130.56h11.52v-119.04h122.88v-11.52zM46.08,46.08v130.56h108.84c5.47985,5.42637 9.34166,9.2175 9.435,9.2175l1.1475,1.1475c6.144,6.144 16.131,6.912 22.275,0c5.76,-6.144 5.3775,-15.357 -0.3825,-21.885l-1.155,-1.155l-6.1425,-6.1425v-111.7425zM105.2175,104.835l15.33,4.215l-10.8525,11.1zM126.0075,114.45l53.5125,53.1675l-11.325,11.325l-0.195,0.195l-53.04,-53.385z"></path></g></g></svg>
+          <h3>Customize your calendar</h3>
+          <p>We create a customizable calendar with your extracted PDF data.</p>
         </div>
       </div>
 
