registeration in home page added

--- a/my_proj/src/templates/home.html
+++ b/my_proj/src/templates/home.html
@@ -140,13 +140,126 @@
           </div>
       </div>
     </div> <!-- /container -->
-    <div id="Account" class="jumbotron">
+    <!--<div id="Account" class="jumbotron">
 
 
         <div class="file-upload-wrapper">
             <input type="file" id="input-file-now-custom-1" class="file-upload" data-default-file="https://mdbootstrap.com/img/Photos/Others/images/89.jpg" />
         </div>
-    </div>
+    </div>-->
+    <body>
+
+        <!-- Top content -->
+        <div class="top-content">
+          
+            <div class="inner-bg">
+                <div class="container">
+                    
+                    <div class="row">
+                        <div class="col-sm-5">
+                          
+                          <div class="form-box">
+                            <div class="form-top">
+                              <div class="form-top-left">
+                                <h3>Login to our site</h3>
+                                  <p>Enter username and password to log on:</p>
+                              </div>
+                              <div class="form-top-right">
+                                <i class="fa fa-key"></i>
+                              </div>
+                              </div>
+                              <div class="form-bottom">
+                            <form role="form" action="" method="post" class="login-form">
+                              <div class="form-group">
+                                <label class="sr-only" for="form-username">Username</label>
+                                  <input type="text" name="form-username" placeholder="Username..." class="form-username form-control" id="form-username">
+                                </div>
+                                <div class="form-group">
+                                  <label class="sr-only" for="form-password">Password</label>
+                                  <input type="password" name="form-password" placeholder="Password..." class="form-password form-control" id="form-password">
+                                </div>
+                                <button type="submit" class="btn">Sign in!</button>
+                            </form>
+                          </div>
+                        </div>
+                    
+                     
+                          
+                        </div>
+                        
+                        <div class="col-sm-1 middle-border"></div>
+                        <div class="col-sm-1"></div>
+                          
+                        <div class="col-sm-5">
+                          
+                          <div class="form-box">
+                            <div class="form-top">
+                              <div class="form-top-left">
+                                <h3>Sign up now</h3>
+                                  <p>Fill in the form below to get instant access:</p>
+                              </div>
+                              <div class="form-top-right">
+                                <i class="fa fa-pencil"></i>
+                              </div>
+                              </div>
+                              <div class="form-bottom">
+                            <form role="form" action="" method="post" class="registration-form">
+                              <div class="form-group">
+                                <label class="sr-only" for="form-first-name">First name</label>
+                                  <input type="text" name="form-first-name" placeholder="First name..." class="form-first-name form-control" id="form-first-name">
+                                </div>
+                                <div class="form-group">
+                                  <label class="sr-only" for="form-last-name">Last name</label>
+                                  <input type="text" name="form-last-name" placeholder="Last name..." class="form-last-name form-control" id="form-last-name">
+                                </div>
+                                <div class="form-group">
+                                  <label class="sr-only" for="form-email">Email</label>
+                                  <input type="text" name="form-email" placeholder="Email..." class="form-email form-control" id="form-email">
+                                </div>
+                                <div class="form-group">
+                                  <label class="sr-only" for="form-about-yourself">About yourself</label>
+                                  <textarea name="form-about-yourself" placeholder="About yourself..." 
+                                        class="form-about-yourself form-control" id="form-about-yourself"></textarea>
+                                </div>
+                                <button type="submit" class="btn">Sign me up!</button>
+                            </form>
+                          </div>
+                          </div>
+                          
+                        </div>
+                    </div>
+                    
+                </div>
+            </div>
+            
+        </div>
+
+        <!-- Footer -->
+        <footer>
+          <div class="container">
+            <div class="row">
+              
+              <div class="col-sm-8 col-sm-offset-2">
+                <div class="footer-border"></div>
+                <p>Contact us: team@syllaview.com
+                 </p>
+              </div>
+              
+            </div>
+          </div>
+        </footer>
+
+        <!-- Javascript -->
+        <script src="assets/js/jquery-1.11.1.min.js"></script>
+        <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+        <script src="assets/js/jquery.backstretch.min.js"></script>
+        <script src="assets/js/scripts.js"></script>
+        
+        <!--[if lt IE 10]>
+            <script src="assets/js/placeholder.js"></script>
+        <![endif]-->
+
+    </body>
 
 
     {% block footer %}
